--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,76 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/hinhnen1"
+    android:orientation="vertical"
+    android:gravity="center"
+    tools:context="com.nhuocquy.tracnghiemapp.activity.ActivityChonMonThiThu">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+    <TextView
+        android:id="@+id/tvTillte"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/main_tittle"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/colorAccent"
+        android:textSize="35dp"
+        android:textStyle="bold" />
+    <Button
+        android:id="@+id/btnThiThu"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/shape_effects"
+        android:text="@string/main_thi_thu"
+        android:textColor="#ffffff"
+        android:textSize="16dp"
+        />
+    <Button
+        android:id="@+id/btnThiThat"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/shape_effects"
+        android:text="@string/main_thi_that"
+        android:textColor="#ffffff"
+        android:textSize="16dp"
+        />
+    <Button
+        android:id="@+id/btnDangNhap"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/shape_effects"
+        android:text="@string/main_dang_nhap"
+        android:textColor="#ffffff"
+        android:textSize="16dp"
+        />
+    <Button
+        android:id="@+id/btnDangKi"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/shape_effects"
+        android:text="@string/main_dang_ki"
+        android:textColor="#ffffff"
+        android:textSize="16dp"
+        />
+    <Button
+        android:id="@+id/btnXepHang"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/shape_boder"
+        android:text="@string/main_xep_hang"
+        android:textColor="#ffffff"
+        android:textSize="16dp"
+        />
+
+</LinearLayout>
