sua trang de thi

--- a/app/src/main/res/layout/activity_ket_qua_xep_hang.xml
+++ b/app/src/main/res/layout/activity_ket_qua_xep_hang.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/hinhnen1"
     tools:context="com.nhuocquy.tracnghiemapp.activity.ActivityKetQuaXepHang"
     android:orientation="vertical">
 
@@ -12,18 +13,18 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
-        android:id="@+id/tvMonHoc"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Môn học"
-        android:textSize="16dp"
+        android:text="@string/mon_hoc"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:layout_marginBottom="10dp" />
     <TextView
-        android:id="@+id/tvMonHoc1"
+        android:id="@+id/tvMonHoc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Chuyên đề java"
-        android:textSize="16dp"
+        android:textSize="20dp"
         android:layout_marginBottom="10dp" />
 </LinearLayout>
     <LinearLayout
@@ -31,18 +32,18 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/tvDoKho"
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Độ khó"
-            android:textSize="16dp"
+            android:text="@string/do_kho"
+            android:textSize="20dp"
+            android:textStyle="bold"
             android:layout_marginBottom="10dp" />
         <TextView
-            android:id="@+id/tvDoKho1"
+            android:id="@+id/tvDoKho"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Trung bình"
-            android:textSize="16dp"
+            android:textSize="20dp"
             android:layout_marginBottom="10dp" />
     </LinearLayout>
     <LinearLayout
@@ -50,18 +51,18 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/tvDiemCaoNhat"
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Điểm cao nhất"
-            android:textSize="16dp"
+            android:text="@string/diem_cao_nhat"
+            android:textSize="20dp"
+            android:textStyle="bold"
             android:layout_marginBottom="10dp" />
         <TextView
-            android:id="@+id/tvDiemCaoNhat1"
+            android:id="@+id/tvDiemCaoNhat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="9.5đ"
-            android:textSize="16dp"
+            android:textSize="20dp"
             android:layout_marginBottom="10dp" />
     </LinearLayout>
     <LinearLayout
@@ -69,18 +70,18 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/tvXepHang"
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Xếp hạng"
-            android:textSize="16dp"
+            android:text="@string/xep_hang"
+            android:textSize="20dp"
+            android:textStyle="bold"
             android:layout_marginBottom="10dp" />
         <TextView
-            android:id="@+id/tvXepHang1"
+            android:id="@+id/tvXepHang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hạng 3"
-            android:textSize="16dp"
+            android:textSize="20dp"
             android:layout_marginBottom="10dp" />
     </LinearLayout>
     <LinearLayout
@@ -88,20 +89,29 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/tvViTri"
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Vị trí"
-            android:textSize="16dp"
+            android:text="@string/vi_tri"
+            android:textSize="20dp"
+            android:textStyle="bold"
             android:layout_marginBottom="10dp" />
         <TextView
-            android:id="@+id/tvViTri1"
+            android:id="@+id/tvViTri"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="5"
-            android:textSize="16dp"
+            android:textSize="20dp"
             android:layout_marginBottom="10dp" />
     </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/danh_sach_xep_hang"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/colorAccent"
+        android:textSize="25dp"
+        android:textStyle="bold" />
 <ListView
     android:id="@+id/lvDauBang"
     android:layout_width="match_parent"
