--- a/app/src/main/res/layout/activity_chon_mon_thi_thu.xml
+++ b/app/src/main/res/layout/activity_chon_mon_thi_thu.xml
@@ -21,7 +21,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_alignParentRight="true"
-        android:background="#ffffff"
+        android:background="@drawable/cell_shape"
         android:textColor="#000000"
         android:textSize="16dp"
         android:layout_marginBottom="20dp"
@@ -41,7 +41,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_alignParentRight="true"
-        android:background="#ffffff"
+        android:background="@drawable/cell_shape"
         android:textColor="#000000"
         android:textSize="16dp"
         android:layout_marginBottom="20dp"
@@ -61,7 +61,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_alignParentRight="true"
-        android:background="#ffffff"
+        android:background="@drawable/cell_shape"
         android:textColor="#000000"
         android:textSize="16dp"
         android:layout_marginBottom="20dp"
