--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -4,55 +4,41 @@
     android:layout_width="match_parent" android:layout_gravity="center"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/ln"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/login"
         >
         <TextView
-            android:id="@+id/tv_name_sign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:textSize="20dp"
             android:textColor="#228B22"
-            android:text="Tên đăng nhập: " />
+            android:text="@string/dang_nhap_ten" />
         <EditText
+            android:id="@+id/edtTen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:ems="10"
-            android:id="@+id/edtSdt"
             android:layout_gravity="center_horizontal"
             android:textSize="20dp"
             android:layout_marginTop="15dp"
             android:paddingBottom="10dp"
-            android:hint="Tên đăng nhập" />
+            android:hint="@string/dang_nhap_ten" />
         <TextView
-            android:id="@+id/tv_name_pass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
             android:textColor="#228B22"
-            android:text="Mật khẩu: " />
+            android:text="@string/dang_nhap_mat_khau" />
         <EditText
+            android:id="@+id/edtMatKhau"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/edtPass"
             android:layout_gravity="center_horizontal"
             android:textSize="20dp"
             android:layout_marginTop="15dp"
@@ -69,17 +55,17 @@
         android:layout_gravity="center_horizontal">
 
         <CheckBox
+            android:id="@+id/ckboxLuu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lưu đăng nhập"
-            android:id="@+id/checkbox_ldn"
+            android:text="@string/dang_nhap_luu"
             android:layout_gravity="center_horizontal" />
 
         <Button
+            android:id="@+id/btnDangNhap"
             android:layout_width="312dp"
             android:layout_height="wrap_content"
-            android:text="Đăng nhập"
-            android:id="@+id/btnDangNhapLogin"
+            android:text="@string/dang_nhap"
             android:layout_gravity="center_horizontal"
             android:layout_row="1"
             android:layout_column="0"
@@ -89,11 +75,11 @@
             android:textSize="25dp"/>
 
         <TextView
+            android:id="@+id/tvQuenMatKhau"
             android:layout_width="146dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Quên mật khẩu?"
-            android:id="@+id/textView5"
+            android:text="@string/dang_nhap_quen_mk"
             android:layout_row="0"
             android:layout_column="0"
             android:textSize="18dp"
@@ -101,7 +87,6 @@
             android:textColor="#ff000000"
             android:textStyle="italic"
             android:layout_gravity="center_horizontal"
-
             android:textAlignment="gravity" />
 
     </LinearLayout>
