--- a/app/src/main/res/layout/activity_de_thi2.xml
+++ b/app/src/main/res/layout/activity_de_thi2.xml
@@ -12,21 +12,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
+            android:layout_margin="10dp"
+            android:background="@drawable/logo"
             android:orientation="vertical">
-
             <TextView
                 android:id="@+id/tvCauHoi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Câu 1: Hãy cho biết.... \n\n\n\n??(click xem thêm hình ảnh)"
-                android:textSize="16dp"
-                android:layout_marginBottom="10dp" />
-
+                android:layout_margin="5dp"
+                android:text="Câu 1: Hãy cho biết.... \n\n\n??(click xem thêm hình ảnh)"
+                android:textSize="18dp"
+                />
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/icon6"
+                android:layout_width="100dp"
+                android:layout_height="80dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/code"
                 android:layout_marginBottom="10dp" />
         </LinearLayout>
         <GridView
@@ -34,7 +35,6 @@
             android:layout_height="fill_parent"
             android:id="@+id/gvCauhoi"
             android:numColumns="2">
-
         </GridView>
 
     </LinearLayout>
