--- a/app/src/main/res/layout/activity_ket_qua.xml
+++ b/app/src/main/res/layout/activity_ket_qua.xml
@@ -4,48 +4,68 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical" android:gravity="center"
+     android:gravity="center"
+    android:background="@drawable/hinhnen1"
     tools:context="com.nhuocquy.tracnghiemapp.activity.ActivityKetQua">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:paddingBottom="80dp">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/danh_sach_xep_hang"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/colorAccent"
+        android:textSize="25dp"
+        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="50dp"
+        >
         <TextView
             android:id="@+id/tvMonHoc"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="Môn học"
-            android:textSize="16dp"
+            android:textSize="22dp"
+            android:textStyle="bold"
             android:layout_marginBottom="10dp" />
         <TextView
             android:id="@+id/tvMonHoc1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Chuyên đề java"
-            android:textSize="16dp"
+            android:textSize="22dp"
             android:layout_marginBottom="10dp" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginLeft="50dp">
         <TextView
             android:id="@+id/tvDiem"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="Điểm"
-            android:textSize="16dp"
+            android:textSize="22dp"
+            android:textStyle="bold"
             android:layout_marginBottom="10dp" />
         <TextView
             android:id="@+id/tvDiem1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="9"
-            android:textSize="16dp"
+            android:textSize="22dp"
             android:layout_marginBottom="10dp" />
     </LinearLayout>
     <Button
-        android:layout_width="312dp"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:text="Submit"
         android:id="@+id/btnSubmitDiem"
@@ -55,9 +75,9 @@
         android:layout_gravity="center_horizontal"
         android:background="@drawable/shape_effects"
         android:textColor="#ffffff"
-        android:textSize="25dp"/>
+        android:textSize="20dp"/>
     <Button
-        android:layout_width="312dp"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:text="Xếp hạng môn học"
         android:id="@+id/btnXepHang"
@@ -67,6 +87,6 @@
         android:layout_gravity="center_horizontal"
         android:background="@drawable/shape_effects"
         android:textColor="#ffffff"
-        android:textSize="25dp"/>
-
+        android:textSize="20dp"/>
+    </LinearLayout>
 </LinearLayout>
