--- a/app/src/main/res/menu/menu_activity_de_thi.xml
+++ b/app/src/main/res/menu/menu_activity_de_thi.xml
@@ -6,19 +6,7 @@
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:title="Item 1" android:id="@+id/item1" app:showAsAction="always" android:icon="@drawable/lefticon"/>
 
-
-    <item android:title="Item 2" android:id="@+id/item2" app:showAsAction="always"  android:icon="@drawable/righticon">
-
-
-    <menu>
-
-    <item android:title="Sub menu item 1" android:id="@+id/sub_Item1"> </item>
-
-    <item android:title="Sub menu item 2" android:id="@+id/subItem2"> </item>
-
-</menu>
-
-</item>
+    <item android:title="Item 2" android:id="@+id/item2" app:showAsAction="always"  android:icon="@drawable/righticon"/>
 
     <item android:title="Item 3" android:id="@+id/item3"  app:showAsAction="ifRoom"  android:icon="@drawable/checkok"/>
 
