comit with add xephang

--- a/app/src/main/res/layout/activity_ket_qua.xml
+++ b/app/src/main/res/layout/activity_ket_qua.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/danh_sach_xep_hang"
+        android:text="@string/submited"
         android:layout_marginBottom="20dp"
         android:textColor="@color/colorAccent"
         android:textSize="25dp"
