--- a/app/src/main/res/layout/item_dap_an.xml
+++ b/app/src/main/res/layout/item_dap_an.xml
@@ -4,31 +4,30 @@
     android:layout_height="wrap_content"
     >
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
         android:background="@drawable/shape_effects_time">
     <CheckBox
-        android:id="@+id/checkbox"
+        android:id="@+id/ckboxDapAn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp" />
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:id="@+id/text"
+        android:id="@+id/tvDapAn"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:textSize="15sp"
         > </TextView>
     <ImageView
-        android:layout_height="80dp"
-        android:layout_width="50dp"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:src="@drawable/code"
-        android:id="@+id/image"
+        android:id="@+id/imvHinhDapAn"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"/>
-
+        android:layout_marginLeft="20dp"/>
     </LinearLayout>
 </LinearLayout>
