--- a/app/src/main/res/layout/item_dap_an.xml
+++ b/app/src/main/res/layout/item_dap_an.xml
@@ -7,7 +7,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:background="@drawable/shape_effects_time">
+        android:background="@drawable/botron"
+        android:orientation="vertical"
+        >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <CheckBox
         android:id="@+id/ckboxDapAn"
         android:layout_width="wrap_content"
@@ -21,13 +27,13 @@
         android:layout_marginLeft="20dp"
         android:textSize="15sp"
         > </TextView>
+</LinearLayout>
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="100dp"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
         android:src="@drawable/code"
         android:id="@+id/imvHinhDapAn"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="20dp"/>
+        android:background="@drawable/yourradio"
+        />
     </LinearLayout>
 </LinearLayout>
