--- a/app/src/main/res/drawable/rbtn_selector.xml
+++ b/app/src/main/res/drawable/rbtn_selector.xml
@@ -11,7 +11,7 @@
 
     <item android:state_checked="false">
         <shape android:shape="ring">
-        <solid android:color="#ffffff" />
+        <solid android:color="@color/colorAccent" />
         <stroke android:width="1dp" android:color="#FFFFFFFF" />
 
     </shape>
