--- a/app/src/main/res/drawable/yourradio.xml
+++ b/app/src/main/res/drawable/yourradio.xml
@@ -1,25 +1,30 @@
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_pressed="true" >
-        <shape android:shape="rectangle" >
-            <corners android:radius="3dip" />
-            <stroke android:width="1dip" android:color="#333333" />
-            <solid android:color="#000000" />
-        </shape>
-    </item>
+<?xml version="1.0" encoding="utf-8"?>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <item android:state_checked="true">
-        <shape android:shape="rectangle" >
-            <corners android:radius="3dip" />
-            <stroke android:width="1dip" android:color="#333333" />
-            <solid android:color="#000000" />
-        </shape>
-    </item>
+    <!-- Set màu nền-->
+    <solid
+        android:color="#ffffff" >
+    </solid>
 
-    <item>
-        <shape android:shape="rectangle"  >
-            <corners android:radius="2dip" />
-            <stroke android:width="1dip" android:color="#333333" />
-            <solid android:color="#ffffff" />
-        </shape>
-    </item>
-</selector>
+    <!-- đặt thuộc tính màu và độ rộng của đường viền -->
+    <stroke
+        android:width="0.5dp"
+        android:color="#000000" >
+    </stroke>
+
+    <!-- các thuộc tính căn chỉnh-->
+    <padding
+        android:left="1dp"
+        android:top="1dp"
+        android:right="1dp"
+        android:bottom="2dp" >
+    </padding>
+
+    <!-- và đây là bán kính đường tròn ở 4 góc -->
+    <corners
+        android:radius="2dp" >
+    </corners>
+
+</shape>
