--- a/app/src/main/res/layout/activity_ket_qua_xep_hang.xml
+++ b/app/src/main/res/layout/activity_ket_qua_xep_hang.xml
@@ -77,7 +77,7 @@
             android:textStyle="bold"
             android:layout_marginBottom="10dp" />
         <TextView
-            android:id="@+id/tvXepHang"
+            android:id="@+id/tvXepHangMonHoc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hạng 3"
@@ -112,6 +112,41 @@
         android:textColor="@color/colorAccent"
         android:textSize="25dp"
         android:textStyle="bold" />
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <TextView
+                android:id="@+id/tvTenDauBang"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="Họ tên"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:layout_marginBottom="10dp" />
+            <TextView
+                android:id="@+id/tvDiem"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Điểm"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:paddingLeft="40dp"
+                android:layout_marginBottom="10dp" />
+            <TextView
+                android:id="@+id/tvXepHang"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="Xếp hạng"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:layout_marginBottom="10dp" />
+        </TableRow>
+    </TableLayout>
 <ListView
     android:id="@+id/lvDauBang"
     android:layout_width="match_parent"
