--- a/app/src/main/res/layout/item_dap_an.xml
+++ b/app/src/main/res/layout/item_dap_an.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:background="@drawable/botron"
         android:orientation="vertical"
         >
@@ -18,19 +18,21 @@
         android:id="@+id/ckboxDapAn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="5dp" />
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:id="@+id/tvDapAn"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="20dp"
         android:textSize="15sp"
         > </TextView>
 </LinearLayout>
     <ImageView
-        android:layout_width="60dp"
-        android:layout_height="40dp"
+        android:layout_width="40dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="5dp"
         android:src="@drawable/code"
         android:id="@+id/imvHinhDapAn"
         android:background="@drawable/yourradio"
