--- a/app/src/main/res/layout/activity_ket_qua.xml
+++ b/app/src/main/res/layout/activity_ket_qua.xml
@@ -28,15 +28,14 @@
         android:layout_marginLeft="50dp"
         >
         <TextView
-            android:id="@+id/tvMonHoc"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="Môn học"
+            android:text="@string/mon_hoc"
             android:textSize="22dp"
             android:textStyle="bold"
             android:layout_marginBottom="10dp" />
         <TextView
-            android:id="@+id/tvMonHoc1"
+            android:id="@+id/tvMonHoc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Chuyên đề java"
@@ -49,15 +48,14 @@
         android:orientation="horizontal"
         android:layout_marginLeft="50dp">
         <TextView
-            android:id="@+id/tvDiem"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="Điểm"
+            android:text="@string/diem"
             android:textSize="22dp"
             android:textStyle="bold"
             android:layout_marginBottom="10dp" />
         <TextView
-            android:id="@+id/tvDiem1"
+            android:id="@+id/tvDiem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="9"
