--- a/app/src/main/res/layout/activity_dang_ki.xml
+++ b/app/src/main/res/layout/activity_dang_ki.xml
@@ -168,7 +168,7 @@
         android:layout_gravity="center_horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:textSize="16dp"
             android:text="Khoa" />
@@ -191,7 +191,7 @@
         android:layout_gravity="center_horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:textSize="16dp"
             android:text="Ngành" />
