--- a/app/src/main/res/layout/activity_danh_sach_xep_hang.xml
+++ b/app/src/main/res/layout/activity_danh_sach_xep_hang.xml
@@ -33,7 +33,7 @@
                 android:textStyle="bold"
                 android:layout_marginBottom="10dp" />
             <TextView
-                android:id="@+id/tvXepHangMonHoc"
+                android:id="@+id/tvXepHangMonHocDSXH"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="Xếp hạng"
