--- a/app/src/main/res/layout/activity_ket_qua_thi.xml
+++ b/app/src/main/res/layout/activity_ket_qua_thi.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
      android:gravity="center"
     android:background="@drawable/hinhnen1"
-    tools:context="com.nhuocquy.tracnghiemapp.activity.ActivityKetQua">
+    tools:context=".activity.ActivityKetQuaThi">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
