--- a/app/src/main/res/layout/activity_ket_qua_xep_hang.xml
+++ b/app/src/main/res/layout/activity_ket_qua_xep_hang.xml
@@ -77,7 +77,7 @@
             android:textStyle="bold"
             android:layout_marginBottom="10dp" />
         <TextView
-            android:id="@+id/tvXepHangMonHoc"
+            android:id="@+id/tvXepHangMonHocKQXH"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hạng 3"
@@ -119,7 +119,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            android:orientation="horizontal">
             <TextView
                 android:id="@+id/tvTenDauBang"
                 android:layout_width="180dp"
@@ -138,7 +138,6 @@
                 android:paddingLeft="40dp"
                 android:layout_marginBottom="10dp" />
             <TextView
-                android:id="@+id/tvXepHang"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="Xếp hạng"
