--- a/app/src/main/res/menu/menu_activity_de_thi.xml
+++ b/app/src/main/res/menu/menu_activity_de_thi.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.nhuocquy.tracnghiemapp.activity.ActivityDeThi">
+    tools:context=".activity.ActivityLamBai">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:title="Item 1" android:id="@+id/mnBtnLeft" app:showAsAction="always" android:icon="@drawable/lefticon"/>
