--- a/app/src/main/res/layout/item_xep_hang_mon_hoc.xml
+++ b/app/src/main/res/layout/item_xep_hang_mon_hoc.xml
@@ -18,6 +18,20 @@
                 android:textSize="15dp"
                 android:layout_marginBottom="10dp" />
             <TextView
+                android:id="@+id/tvDoKho"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="Khó"
+                android:textSize="15dp"
+                android:layout_marginBottom="10dp" />
+            <TextView
+                android:id="@+id/tvDiem"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:text="10"
+                android:textSize="15dp"
+                android:layout_marginBottom="10dp" />
+            <TextView
                 android:id="@+id/tvXepHangMonHoc"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
@@ -25,20 +39,8 @@
                 android:textSize="15dp"
                 android:paddingLeft="40dp"
                 android:layout_marginBottom="10dp" />
-            <TextView
-                android:id="@+id/tvViTriMonHoc"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:text="10"
-                android:textSize="15dp"
-                android:layout_marginBottom="10dp" />
-            <TextView
-                android:id="@+id/tvDoKho"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="Khó"
-                android:textSize="15dp"
-                android:layout_marginBottom="10dp" />
+
+
 
         </TableRow>
     </TableLayout>
