--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="30dp"
             android:textSize="20dp"
             android:textColor="#228B22"
-            android:text="Tên đăng nhập: " />
+            android:text="@string/dang_nhap_ten" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,15 +41,15 @@
             android:textSize="20dp"
             android:layout_marginTop="15dp"
             android:paddingBottom="10dp"
-            android:hint="Tên đăng nhập"
-            android:text="username"/>
+            android:hint="username"
+            />
         <TextView
             android:id="@+id/tv_name_pass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
             android:textColor="#228B22"
-            android:text="Mật khẩu: " />
+            android:text="@string/dang_nhap_mat_khau" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
             android:hint="********"
             android:inputType="textPassword"
             android:paddingBottom="10dp"
-            android:text="password"/>
+            />
 
     </LinearLayout>
 
@@ -73,14 +73,14 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lưu đăng nhập"
+            android:text="@string/dang_nhap_luu"
             android:id="@+id/checkbox_ldn"
             android:layout_gravity="center_horizontal" />
 
         <Button
             android:layout_width="312dp"
             android:layout_height="wrap_content"
-            android:text="Đăng nhập"
+            android:text="@string/dang_nhap"
             android:id="@+id/btnDangNhapLogin"
             android:layout_gravity="center_horizontal"
             android:layout_row="1"
@@ -94,7 +94,7 @@
             android:layout_width="146dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Quên mật khẩu?"
+            android:text="@string/dang_nhap_quen_mk"
             android:id="@+id/textView5"
             android:layout_row="0"
             android:layout_column="0"
