--- a/app/src/main/res/layout/activity_ket_qua_thi.xml
+++ b/app/src/main/res/layout/activity_ket_qua_thi.xml
@@ -65,7 +65,7 @@
     <Button
         android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="@string/submit"
         android:id="@+id/btnSubmitDiem"
         android:layout_row="1"
         android:layout_column="0"
@@ -77,7 +77,7 @@
     <Button
         android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:text="Xếp hạng môn học"
+        android:text="@string/xep_hang_mh"
         android:id="@+id/btnXepHang"
         android:layout_row="1"
         android:layout_column="0"
