--- a/app/src/main/res/layout/activity_nhan_de_thi.xml
+++ b/app/src/main/res/layout/activity_nhan_de_thi.xml
@@ -110,7 +110,7 @@
         <Button
             android:layout_width="260dp"
             android:layout_height="wrap_content"
-            android:text="Bắt đầu làm bài"
+            android:text="@string/batdaulambai"
             android:id="@+id/btnLamBai"
             android:layout_row="1"
             android:layout_column="0"
@@ -122,7 +122,7 @@
         <Button
             android:layout_width="260dp"
             android:layout_height="wrap_content"
-            android:text="Thoát"
+            android:text="@string/thoat"
             android:id="@+id/btnThoat"
             android:layout_row="1"
             android:layout_column="0"
