--- a/app/src/main/res/layout/activity_lam_bai.xml
+++ b/app/src/main/res/layout/activity_lam_bai.xml
@@ -39,6 +39,11 @@
             android:numColumns="2">
         </GridView>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvGiaiThich" />
+
     </LinearLayout>
 
 </ScrollView>
